--- a/amp.html
+++ b/amp.html
@@ -107,7 +107,7 @@
   </amp-state>
   <div class="overlay" [class]="noloPath.step < 0 ? 'overlay' : 'hidden'">
     <div>
-      <span on="tap:AMP.setState({noloPath: {step: practiceAreaSelect.routingQuestion.length > 0 ? 0 : 1}})" tabindex=99999 role="start">START</span>
+      <span on="tap:AMP.setState({noloPath: {step: practiceAreaSelect.routingQuestion.length > 0 ? 0 : 1}})" tabindex=99999 role="start">START NOLO LEAD PATH</span>
     </div>
   </div>
   <!-- <h2> -->
