--- a/amp.html
+++ b/amp.html
@@ -88,9 +88,10 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: white;
+      background-color: #dfdfdf;
       text-align: center;
-      vertical-align: middle;
+      color: orange;
+      font-weight: bold;
     }
   </style>
 
