--- a/amp.html
+++ b/amp.html
@@ -13,6 +13,7 @@
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
   <style amp-custom>
     body {
+      background-color: #efefef;
       padding-left: 10px;
       padding-right: 10px;
       font-family: sans-serif;
