--- a/pwa.html
+++ b/pwa.html
@@ -85,14 +85,10 @@
 
       <figure class="figure">
         <figcaption>Here is a responsive image.</figcaption>
+	      <img src="/nolo/images/landscape_village_1280x853.jpg" width="1280" height="768">
       </figure>
 
       <p>Lorem ipsum dolor sit amet, voluptua oporteat cum cu, eu vix interesset scribentur. Et iudico efficiendi duo, vim an odio iusto reformidans. At maluisset scripserit duo, cum in sumo delenit. Quot erant maiestatis usu ut. Ne mea maiorum vivendum argumentum, tale utinam postea mei in, eam in odio dicta patrioque.</p>
-
-      <!-- ## AD support -->
-      <!-- There are no limitations regarding the number or placement of ads in an AMP. Learn more about `amp-ad` [here](/components/amp-ad/).  -->
-      <div class="amp-ad-container">
-      </div>
 
       <p>
       Cum ad graeci legimus, ut duo omnesque petentium, mei saepe explicari principes eu. Ex mei ocurreret expetendis, ex errem blandit has. Phaedrum mediocrem appellantur his ut. Erat viris mediocrem id ius, ad dicta appareat assentior sit. Nec et nullam singulis moderatius, est reque vidisse copiosae eu.</p>
