--- a/pwa.html
+++ b/pwa.html
@@ -48,6 +48,7 @@
 
       <figure class="figure">
         <figcaption>Here is a responsive image.</figcaption>
+	      <img src="/nolo/images/landscape_village_1280x853.jpg">
       </figure>
 
       <p>Lorem ipsum dolor sit amet, voluptua oporteat cum cu, eu vix interesset scribentur. Et iudico efficiendi duo, vim an odio iusto reformidans. At maluisset scripserit duo, cum in sumo delenit. Quot erant maiestatis usu ut. Ne mea maiorum vivendum argumentum, tale utinam postea mei in, eam in odio dicta patrioque.</p>
@@ -83,10 +84,6 @@
       Mutat dolores ea duo. Usu cu dico everti tincidunt, pri vero nullam vidisse no. Eam novum aeque populo cu. Verear contentiones ne quo, no sed consulatu definitionem.
       </p>
 
-      <figure class="figure">
-        <figcaption>Here is a responsive image.</figcaption>
-	      <img src="/nolo/images/landscape_village_1280x853.jpg" width="1280" height="768">
-      </figure>
 
       <p>Lorem ipsum dolor sit amet, voluptua oporteat cum cu, eu vix interesset scribentur. Et iudico efficiendi duo, vim an odio iusto reformidans. At maluisset scripserit duo, cum in sumo delenit. Quot erant maiestatis usu ut. Ne mea maiorum vivendum argumentum, tale utinam postea mei in, eam in odio dicta patrioque.</p>
 
