--- a/article.html
+++ b/article.html
@@ -182,7 +182,7 @@ preview: default
 
       <!-- ## Image galleries  -->
       <!-- Use `amp-carousel` for image galleries. Learn more about creating image galleries in AMP [here](/advanced/image_galleries_with_amp-carousel/).  -->
-      <amp-carousel width="1280" height="1000" layout="responsive" type="slides">
+      <!--<amp-carousel width="1280" height="1000" layout="responsive" type="slides">
         <figure class="figure">
           <amp-img src="/nolo/images/landscape_lake_1280x857.jpg" width="1280" height="857" layout="responsive"></amp-img>
           <figcaption>Each image has a different caption.</figcaption>
@@ -195,7 +195,7 @@ preview: default
           <amp-img src="/nolo/images/landscape_desert_1280x853.jpg" width="1280" height="853" layout="responsive"></amp-img>
           <figcaption>The third image has its caption.</figcaption>
         </figure>
-      </amp-carousel>
+      </amp-carousel>-->
 
       <p>Lorem ipsum dolor sit amet, voluptua oporteat cum cu, eu vix interesset scribentur. Et iudico efficiendi duo, vim an odio iusto reformidans. At maluisset scripserit duo, cum in sumo delenit. Quot erant maiestatis usu ut. Ne mea maiorum vivendum argumentum, tale utinam postea mei in, eam in odio dicta patrioque.
       </p>
