--- a/article.html
+++ b/article.html
@@ -13,6 +13,7 @@ preview: default
     <head>
       <meta charset="utf-8">
       <title>News Article</title>
+	    <link rel="shortcut icon" href="/nolo/favicon.ico">
       <script async src="https://cdn.ampproject.org/v0.js"></script>
       <!-- ## Setup -->
       <!--
@@ -29,7 +30,7 @@ preview: default
       <!-- Import `amp-mustache` as a format template for `amp-list` -->
       <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
 	
-      <link rel="canonical" href="https://ampbyexample.com/samples_templates/news_article/">
+      <link rel="canonical" href="">
 
       <!-- ## Metadata -->
       <!-- The Top Stories carousel requires schema.org markup for one of the following types: Article, NewsArticle, BlogPosting, or VideoObject. [Learn more](https://developers.google.com/structured-data/carousels/top-stories#markup_specification).  -->
@@ -145,11 +146,11 @@ preview: default
 
       <!-- The Social Share extension provides a common interface for share buttons.  Learn more about `amp-social-share` [here](/components/amp-social-share/).  -->
       <p class="heading">
-      <amp-social-share type="twitter" width="45" height="33"></amp-social-share>
+<!--       <amp-social-share type="twitter" width="45" height="33"></amp-social-share>
       <amp-social-share type="facebook" width="45" height="33" data-attribution="254325784911610"></amp-social-share>
       <amp-social-share type="gplus" width="45" height="33"></amp-social-share>
       <amp-social-share type="email" width="45" height="33"></amp-social-share>
-      <amp-social-share type="pinterest" width="45" height="33"></amp-social-share>
+      <amp-social-share type="pinterest" width="45" height="33"></amp-social-share> -->
       </p>
 
       <p>Lorem ipsum dolor sit amet, voluptua oporteat cum cu, eu vix interesset scribentur. Et iudico efficiendi duo, vim an odio iusto reformidans. At maluisset scripserit duo, cum in sumo delenit. Quot erant maiestatis usu ut. Ne mea maiorum vivendum argumentum, tale utinam postea mei in, eam in odio dicta patrioque.
