--- a/article.html
+++ b/article.html
@@ -146,11 +146,11 @@ preview: default
 
       <!-- The Social Share extension provides a common interface for share buttons.  Learn more about `amp-social-share` [here](/components/amp-social-share/).  -->
       <p class="heading">
-<!--       <amp-social-share type="twitter" width="45" height="33"></amp-social-share>
+      <amp-social-share type="twitter" width="45" height="33"></amp-social-share>
       <amp-social-share type="facebook" width="45" height="33" data-attribution="254325784911610"></amp-social-share>
       <amp-social-share type="gplus" width="45" height="33"></amp-social-share>
       <amp-social-share type="email" width="45" height="33"></amp-social-share>
-      <amp-social-share type="pinterest" width="45" height="33"></amp-social-share> -->
+      <amp-social-share type="pinterest" width="45" height="33"></amp-social-share>
       </p>
 
       <p>Lorem ipsum dolor sit amet, voluptua oporteat cum cu, eu vix interesset scribentur. Et iudico efficiendi duo, vim an odio iusto reformidans. At maluisset scripserit duo, cum in sumo delenit. Quot erant maiestatis usu ut. Ne mea maiorum vivendum argumentum, tale utinam postea mei in, eam in odio dicta patrioque.
@@ -158,7 +158,7 @@ preview: default
       <p>
       Cum ad graeci legimus, ut duo omnesque petentium, mei saepe explicari principes eu. Ex mei ocurreret expetendis, ex errem blandit has. Phaedrum mediocrem appellantur his ut. Erat viris mediocrem id ius, ad dicta appareat assentior sit. Nec et nullam singulis moderatius, est reque vidisse copiosae eu.
       </p>
-        <amp-iframe src="https://tehflatch.github.io/nolo/amp.html" sandbox="allow-forms allow-scripts" layout="fixed-height" height=400></amp-iframe>
+<!--         <amp-iframe src="https://tehflatch.github.io/nolo/amp.html" sandbox="allow-forms allow-scripts" layout="fixed-height" height=400></amp-iframe> -->
       <p>
       Mutat dolores ea duo. Usu cu dico everti tincidunt, pri vero nullam vidisse no. Eam novum aeque populo cu. Verear contentiones ne quo, no sed consulatu definitionem.
       </p>
@@ -180,10 +180,7 @@ preview: default
       <p>
       Mutat dolores ea duo. Usu cu dico everti tincidunt, pri vero nullam vidisse no. Eam novum aeque populo cu. Verear contentiones ne quo, no sed consulatu definitionem.
       </p>
-
-      <!-- ## Image galleries  -->
-      <!-- Use `amp-carousel` for image galleries. Learn more about creating image galleries in AMP [here](/advanced/image_galleries_with_amp-carousel/).  -->
-      <!--<amp-carousel width="1280" height="1000" layout="responsive" type="slides">
+	<amp-carousel width="1280" height="1000" layout="responsive" type="slides">
         <figure class="figure">
           <amp-img src="/nolo/images/landscape_lake_1280x857.jpg" width="1280" height="857" layout="responsive"></amp-img>
           <figcaption>Each image has a different caption.</figcaption>
@@ -196,7 +193,7 @@ preview: default
           <amp-img src="/nolo/images/landscape_desert_1280x853.jpg" width="1280" height="853" layout="responsive"></amp-img>
           <figcaption>The third image has its caption.</figcaption>
         </figure>
-      </amp-carousel>-->
+      </amp-carousel>
 
       <p>Lorem ipsum dolor sit amet, voluptua oporteat cum cu, eu vix interesset scribentur. Et iudico efficiendi duo, vim an odio iusto reformidans. At maluisset scripserit duo, cum in sumo delenit. Quot erant maiestatis usu ut. Ne mea maiorum vivendum argumentum, tale utinam postea mei in, eam in odio dicta patrioque.
       </p>
@@ -214,19 +211,10 @@ preview: default
       <p>
       Mutat dolores ea duo. Usu cu dico everti tincidunt, pri vero nullam vidisse no. Eam novum aeque populo cu. Verear contentiones ne quo, no sed consulatu definitionem.
       </p>
-
-      <!-- ## Embedding related content -->
-      <!-- -->
+	      
       <h2>Related Articles</h2>
       <p>These articles might be interesting for you as well...:</p>
-      <!-- It's a good idea to recommend related content to your readers. With `amp-list` it is possible to dynamically include personalized content into your AMPs. It's a good idea to link to the AMP version of related content in order to keep the user in the fast AMP world. Learn more about `amp-list` [here](/components/amp-list/) -->
       </main>
-      <!-- ## Cookie consent -->
-      <!-- Use `amp-user-notification` to implement a cookie consent form (if needed). By default, the AMP runtime doesn't use cookies. Some analytics vendors might use require cookies though. Learn more about `amp-user-notification` [here](/components/amp-user-notification/) -->
-      <!--<amp-user-notification class="cookie-disclaimer" layout="nodisplay" id="amp-user-notification1">
-        This page might use cookies if your analytics vendor requires them.
-        <button on="tap:amp-user-notification1.dismiss">Accept</button>
-      </amp-user-notification>-->
 
     </body>
   </html>
