--- a/article.html
+++ b/article.html
@@ -30,7 +30,7 @@ preview: default
       <!-- Import `amp-mustache` as a format template for `amp-list` -->
       <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
 	
-      <link rel="canonical" href="">
+      <link rel="canonical" href="/nolo/index.html">
 
       <!-- ## Metadata -->
       <!-- The Top Stories carousel requires schema.org markup for one of the following types: Article, NewsArticle, BlogPosting, or VideoObject. [Learn more](https://developers.google.com/structured-data/carousels/top-stories#markup_specification).  -->
