--- a/articlenorouting.html
+++ b/articlenorouting.html
@@ -13,6 +13,7 @@ preview: default
     <head>
       <meta charset="utf-8">
       <title>News Article</title>
+	    <link rel="shortcut icon" href="/nolo/favicon.ico">
       <script async src="https://cdn.ampproject.org/v0.js"></script>
       <!-- ## Setup -->
       <!--
@@ -161,7 +162,7 @@ preview: default
       <p>
       Cum ad graeci legimus, ut duo omnesque petentium, mei saepe explicari principes eu. Ex mei ocurreret expetendis, ex errem blandit has. Phaedrum mediocrem appellantur his ut. Erat viris mediocrem id ius, ad dicta appareat assentior sit. Nec et nullam singulis moderatius, est reque vidisse copiosae eu.
       </p>
-        <amp-iframe src="https://tehflatch.github.io/nolo/amp.html?pid=30" sandbox="allow-forms allow-scripts" layout="fixed-height" height=400></amp-iframe>
+        <amp-iframe src="https://vlamed.github.io/noloAmp/amp.html?pid=30" sandbox="allow-forms allow-scripts allow-same-origin" layout="fixed-height" height=400></amp-iframe>
       <p>
       Mutat dolores ea duo. Usu cu dico everti tincidunt, pri vero nullam vidisse no. Eam novum aeque populo cu. Verear contentiones ne quo, no sed consulatu definitionem.
       </p>
