--- a/articlepopover.html
+++ b/articlepopover.html
@@ -7,7 +7,7 @@ preview: default
 <!-- This is a sample template for a news article in AMP. It demonstrates the usage of AMP components which works well in news articles. Examples include social sharing, image galleries, personalized content, ads, and more.  -->
 <!-- -->
 <!doctype html>
-<html ⚡ [class]="form.opened ? 'no-scrolling' : ''">
+<html ⚡>
 <head>
   <meta charset="utf-8">
   <title>News Article Popup</title>
@@ -92,9 +92,9 @@ preview: default
             text-align: center;
             color: var(--color-text-light);
           }
-	  .pop-over-frame {
-		  -webkit-overflow-scrolling: touch;
-	  }
+    i-amp-scroll-container.amp-active, i-amphtml-scroll-container.amp-active {
+      overflow-y: scroll;
+    }
         </style>
 
 </head>
