--- a/articlepopover.html
+++ b/articlepopover.html
@@ -95,6 +95,10 @@ preview: default
     i-amp-scroll-container.amp-active, i-amphtml-scroll-container.amp-active {
       overflow-y: scroll;
     }
+		  .pop-over-frame {
+    margin-right: 15px;
+    margin-left: 15px;
+}
         </style>
 
 </head>
