--- a/articlepopover.html
+++ b/articlepopover.html
@@ -105,6 +105,9 @@ preview: default
     width: 100%;
     height: 20px;
 }
+	  i-amp-scroll-container.amp-active, i-amphtml-scroll-container.amp-active {
+		-webkit-overflow-scrolling: auto !important;  
+	  }
         </style>
 
 </head>
