--- a/articlepopover.html
+++ b/articlepopover.html
@@ -100,11 +100,11 @@ preview: default
               content: '';
     bottom: 0;
     left: 0;
-    background-color: linear-gradient(#82373700 0px, #efefefc9);
-      background-color: -o-linear-gradient(#82373700 0px, #efefefc9);
-      background-color: -moz-linear-gradient(#82373700 0px, #efefefc9);
-      background-color: -webkit-linear-gradient(#82373700 0px, #efefefc9);
-      background-color: -ms-linear-gradient(#82373700 0px, #efefefc9);
+    background: linear-gradient(#82373700 0px, #efefefc9);
+      background: -o-linear-gradient(#82373700 0px, #efefefc9);
+      background: -moz-linear-gradient(#82373700 0px, #efefefc9);
+      background: -webkit-linear-gradient(#82373700 0px, #efefefc9);
+      background: -ms-linear-gradient(#82373700 0px, #efefefc9);
     position: absolute;
     width: 100%;
     height: 20px;
