--- a/articlepopover.html
+++ b/articlepopover.html
@@ -124,7 +124,7 @@ preview: default
       }
     </script>
   </amp-state>
-  <amp-lightbox id="nolo-lead" layout="nodisplay">
+  <amp-lightbox id="nolo-lead" scrollable layout="nodisplay">
       
     <div style="height:100%; width:100%; background-color:#ffffffb8; padding-top:30px">
       <button on="tap:nolo-lead.close,AMP.setState({modal: {open: false}})">CLOSE</button>
