--- a/articlepopover.html
+++ b/articlepopover.html
@@ -132,7 +132,7 @@ preview: default
       
     <div style="padding-top: 30px; width:100%;">
       <button on="tap:nolo-lead.close,AMP.setState({modal: {open: false}})">CLOSE</button>
-  <amp-iframe class="pop-over-frame"src="https://vlamed.github.io/noloAmp/amp.html" sandbox="allow-forms allow-scripts allow-same-origin" layout="fixed-height" height="400">
+  <amp-iframe class="pop-over-frame"src="https://vlamed.github.io/noloAmp/amp.html" sandbox="allow-forms allow-scripts allow-same-origin allow-top-navigation" layout="fixed-height" height="400">
       	<amp-img layout="fill" src="https://foo.com/foo.png" placeholder></amp-img>
       </amp-iframe>
       </div>
