--- a/articlepopover.html
+++ b/articlepopover.html
@@ -163,10 +163,10 @@ preview: default
     <p>
       Cum ad graeci legimus, ut duo omnesque petentium, mei saepe explicari principes eu. Ex mei ocurreret expetendis, ex errem blandit has. Phaedrum mediocrem appellantur his ut. Erat viris mediocrem id ius, ad dicta appareat assentior sit. Nec et nullam singulis moderatius, est reque vidisse copiosae eu.
     </p>
-    <button role="openForm" tabindex="99" on="tap:nolo-lead,AMP.setState({modal: {open: true}})">
+<!--     <button role="openForm" tabindex="99" on="tap:nolo-lead,AMP.setState({modal: {open: true}})">
       Find a lawyer!
-    </button>
-    
+    </button> -->
+    <amp-iframe class="pop-over-frame"src="https://vlamed.github.io/noloAmp/routing.html" sandbox="allow-forms allow-scripts allow-same-origin allow-top-navigation" layout="fixed-height" height="100">
     <p>
       Mutat dolores ea duo. Usu cu dico everti tincidunt, pri vero nullam vidisse no. Eam novum aeque populo cu. Verear contentiones ne quo, no sed consulatu definitionem.
     </p>
