--- a/lead-popup-path.html
+++ b/lead-popup-path.html
@@ -133,7 +133,7 @@ preview: default
       
     <div style="padding-top: 30px; width:100%;">
       <button on="tap:nolo-lead.close,AMP.setState({modal: {open: false}})">CLOSE</button>
-  <amp-iframe class="pop-over-frame"[src]="'https://vlamed.github.io/noloAmp/amp-carousel.html?pid='+modal.pid" sandbox="allow-forms allow-scripts allow-same-origin allow-top-navigation" layout="fixed-height" height="400">
+  <amp-iframe class="pop-over-frame"src="https://vlamed.github.io/noloAmp/amp-carousel.html"[src]="'https://vlamed.github.io/noloAmp/amp-carousel.html?pid='+modal.pid" sandbox="allow-forms allow-scripts allow-same-origin allow-top-navigation" layout="fixed-height" height="400">
       	<amp-img layout="fill" src="https://foo.com/foo.png" placeholder></amp-img>
       </amp-iframe>
       </div>
@@ -170,7 +170,7 @@ preview: default
   	<template type="amp-mustache">
       <label>{{routingQuestion}}</label>
       {{#routingQuestionOptions}}
-      <button style="display:block; margin-bottom: 5px;" class="button" on="tap:AMP.setState({modal: {open: true, pid:{{value}}}}),nolo-lead">{{name}}</button>
+      <button style="display:block; margin-bottom: 5px;" class="button" on="tap:AMP.setState({modal: {open: true, pid:{{value}} }}),nolo-lead">{{name}}</button>
       {{/routingQuestionOptions}}
       </template>
     </amp-list>
