--- a/lead-popup-path.html
+++ b/lead-popup-path.html
@@ -125,7 +125,7 @@ preview: default
     <script type="application/json">
       {
         "open": false,
-        "pid": 0,
+        "pid": 0
       }
     </script>
   </amp-state>
